--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <!--Image view to set image-->
 
     <ImageView
         android:id="@+id/image_view"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_image_black_24dp"
         android:layout_width="400dp"
-        android:layout_height="400dp"/>
+        android:layout_height="400dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_image_black_24dp" />
 
     <!--Button to capture image-->
     <Button
         android:id="@+id/capture_image_btn"
-        android:text="Capture Image"
         style="@style/Base.Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Capture Image" />
 
 </LinearLayout>
