--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,14 @@
 
     <!--Image view to set image-->
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
+
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="400dp"
@@ -24,5 +32,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Capture Image" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="sendMessage"
+        android:text="Button"
+        tools:text="@string/button_send" />
 
 </LinearLayout>
