--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,35 +10,21 @@
 
     <!--Image view to set image-->
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+    <!--Button to capture image-->
 
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_image_black_24dp" />
+        android:src="@android:drawable/ic_menu_camera" />
 
-    <!--Button to capture image-->
     <Button
         android:id="@+id/capture_image_btn"
         style="@style/Base.Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Capture Image" />
+        android:text="Take a Picture" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="sendMessage"
-        android:text="Button"
-        tools:text="@string/button_send" />
 
 </LinearLayout>
